Add support for showing text and/or image compliments
We don’t have actual compliments just yet, so use placeholder text and a
CC0 placeholder image for now.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
 				color: #fff;
 				background-color: #36C;
 				border: none;
+				cursor: pointer;
+			}
+
+			blockquote {
+				margin: 24px;
+				text-align: center;
+			}
+
+			blockquote img {
+				margin-block: 24px;
 			}
 
 			footer {
@@ -78,9 +88,13 @@
 				we’ve collected a bunch of kind words for you to retrieve.
 				Click the blue button for a small portion of sunshine.
 			</p>
-			<button type=button>
+			<button type=button id=complimentButton>
 				Get a compliment
 			</button>
+			<!-- TODO spec demands no margin collapsing between button and compliment -->
+			<blockquote id=complimentContainer>
+				<!-- filled by JavaScript -->
+			</blockquote>
 			<footer id=attribution>
 				<!-- set by JavaScript -->
 			</footer>
@@ -149,6 +163,55 @@ via Wikimedia Commons`;
 			}
 
 			loadBackground().catch(console.error);
+
+			const compliments = [
+				{
+					text: 'Here goes the text for a short compliment.',
+				},
+				{
+					text: 'Here goes the text for a very long compliment that spans multiple lines and talks about how great Jens is.',
+					image: 'Placeholder.png',
+				},
+			];
+
+			const complimentContainer = document.getElementById('complimentContainer');
+			let complimentText = null,
+				complimentImage = null;
+
+			function applyCompliment(compliment) {
+				if (compliment.text) {
+					if (complimentText === null) {
+						complimentText = document.createElement('p');
+						complimentContainer.append(complimentText);
+					}
+					complimentText.textContent = compliment.text;
+				} else {
+					if (complimentText !== null) {
+						complimentText.remove();
+						complimentText = null;
+					}
+				}
+
+				if (compliment.image) {
+					if (complimentImage === null) {
+						complimentImage = document.createElement('img');
+						complimentContainer.append(complimentImage);
+					}
+					complimentImage.src = compliment.image;
+				} else {
+					if (complimentImage !== null) {
+						complimentImage.remove();
+						complimentImage = null;
+					}
+				}
+			}
+
+			function applyRandomCompliment() {
+				const compliment = compliments[Math.floor(Math.random() * compliments.length)];
+				applyCompliment(compliment);
+			}
+
+			document.getElementById('complimentButton').addEventListener('click', applyRandomCompliment);
 			</script>
 	</body>
 </html>
