Always choose a new random compliment
While this is strictly speaking less random, it’s confusing to the user
if the same compliment is randomly picked twice in a row, so prevent
that by remembering what the last randomly picked compliment was and
trying again until we find a different one.

--- a/index.html
+++ b/index.html
@@ -213,8 +213,13 @@ via Wikimedia Commons`;
 				}
 			}
 
+			let lastRandomCompliment = null;
 			function applyRandomCompliment() {
-				const compliment = compliments[Math.floor(Math.random() * compliments.length)];
+				let compliment;
+				do {
+					compliment = compliments[Math.floor(Math.random() * compliments.length)];
+				} while (compliment === lastRandomCompliment);
+				lastRandomCompliment = compliment;
 				applyCompliment(compliment);
 			}
 
