Add primary class to button
Audio compliments will also use a button, but that one should look
different.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				line-height: 21px;
 			}
 
-			button {
+			button.primary {
 				display: block;
 				margin-block: 40px;
 				margin-inline: auto;
@@ -95,7 +95,7 @@
 				we’ve collected a bunch of kind words for you to retrieve.
 				Click the blue button for a small portion of sunshine.
 			</p>
-			<button type=button id=complimentButton>
+			<button type=button id=complimentButton class=primary>
 				Get a compliment
 			</button>
 			<!-- TODO spec demands no margin collapsing between button and compliment -->
