Animate audio play button a bit
50ms looks reasonably nice to me. We can of course change it later, or
completely get rid of it.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 				background: url("Toicon-icon-fandom-play.svg") center/100%;
 				border: none;
 				cursor: pointer;
+				transition: width 50ms, height, margin-block-start, margin-block-end;
 			}
 
 			button.play:active {
