--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 				margin: 40px;
 				padding: 16px;
 				box-sizing: border-box;
-				height: calc(100vh - 2*40px);
-				max-width: 688px;
+				block-size: calc(100vh - 2*40px);
+				max-inline-size: 688px;
 				background: rgba(255, 255, 255, 75%);
 			}
 
@@ -72,7 +72,7 @@
 			}
 
 			figure img {
-				max-width: 100%;
+				max-inline-size: 100%;
 			}
 
 			figure.audio {
@@ -81,21 +81,21 @@
 
 			button.play {
 				display: block;
-				width: 120px;
-				height: 120px;
+				inline-size: 120px;
+				block-size: 120px;
 				margin-block-start: 16px;
 				margin-inline: auto;
 				background: url("Toicon-icon-fandom-play.svg") center/100%;
 				border: none;
 				cursor: pointer;
-				transition: width 50ms, height, margin-block-start, margin-block-end;
+				transition: inline-size 50ms, block-size, margin-block-start, margin-block-end;
 			}
 
 			button.play:active {
-				width: 104px;
-				height: 104px;
+				inline-size: 104px;
+				block-size: 104px;
 				margin-block-start: calc(16px + (120px - 104px)/2);
-				margin-block-end: calc((120px - 104px)/2); /* so the whole button still has the same height */
+				margin-block-end: calc((120px - 104px)/2); /* so the whole button still has the same block size */
 			}
 
 			footer {
