Preload compliment images after background image
As soon as we’ve added the background image, instruct the browser to
preload the compliment images, since we’ll need (some of) them soon.
(There’s no need to preload audio – the browser does that as soon as we
create the new Audio(), which happens as soon as the compliment is
loaded, not when the “play” button is clicked, so there’s enough time
for preloading to happen until we need to play the audio.)

Note that Firefox currently doesn’t support rel=preload, but that’s
fine: it just gracefully degrades to on-demand loading.

--- a/index.html
+++ b/index.html
@@ -196,7 +196,9 @@ via Wikimedia Commons`;
 				document.getElementById('attribution').innerHTML = await getAttribution(fileTitle);
 			}
 
-			loadBackground().catch(console.error);
+			loadBackground()
+				.then(preloadComplimentImages)
+				.catch(console.error);
 
 			const compliments = [
 				{
@@ -213,6 +215,24 @@ via Wikimedia Commons`;
 					audio: 'LL-Q188_(deu)-Sebastian_Wallroth-Beispiel.wav',
 				},
 			];
+
+			function preloadImage(image) {
+				const link = document.createElement('link');
+				link.href = image;
+				link.rel = 'preload';
+				link.as = 'image';
+				document.head.append(link);
+			}
+
+			function preloadComplimentImages() {
+				for (const compliment of compliments) {
+					if (compliment.image) {
+						preloadImage(compliment.image);
+					}
+					// we don’t preload audio – the browser preloads that as soon as we create the new Audio(),
+					// that’s early enough (there’s a delay before the human clicks the “play” button)
+				}
+			}
 
 			const complimentContainer = document.getElementById('complimentContainer');
 			let complimentText = null,
