Scroll whole page, not just <article>
According to the spec, in case of overflow the whole page is supposed to
be scrollable, not just the article with the compliment. (I suppose it
looks better anyways to have the scrollbar only at the outermost level.)
This requires a solution to the “flex causes overflow” problem, so
horizontally center the <article> differently, by adding margin-inline:
auto to the body (and limiting the body’s inline-size so it doesn’t just
fill the whole screen and have the <article> left-aligned inside).

The only unfortunate side effect of this is that if the size of the page
changes (a compliment is loaded that causes it to become scrollable),
the background now jumps around, because it is centered and therefore
moves with the center of the page, not of the screen.

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 				background-size: cover;
 				background-position: center;
 				background-color: #a2a9b1; /* to avoid a glaring white while the background-image hasn’t loaded */
-				/* center the <article> (can’t use margin: auto because it already has a real margin) */
-				display: flex;
-				justify-content: center;
-				overflow: hidden; /* for some reason the display: flex causes overflow :( */
+				margin-inline: auto; /* horizontally center the <article> */
+				max-inline-size: max-content;
+				overflow-block: auto;
 			}
 
 			article {
@@ -26,8 +25,7 @@
 				margin: 40px;
 				padding: 16px;
 				box-sizing: border-box;
-				block-size: calc(100vh - 2*40px);
-				overflow-block: auto;
+				min-block-size: calc(100vh - 2*40px);
 				max-inline-size: 688px;
 				background: rgba(255, 255, 255, 75%);
 			}
