Move background-image to a dedicated <div>
This saves the problem mentioned in the last commit message, where the
background image jumps around if the page size changes due to larger
compliments: we add a <div> that is always as high and wide as the
viewport, and positioned at 0/0, and give the background-image to that
rather than the <body>.

Sadly, this requires us to use the non-logical properties width and
height. Using the 100vh and 100vw units with the logical properties
wouldn’t make sense, and we can’t quite use the direction-independent
100% instead, because that gets affected by the scrollbar if one exists
(so the background-image shifts around slightly as the scrollbar appears
and disappears).

--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
 			}
 
 			body {
-				background-size: cover;
-				background-position: center;
-				background-color: #a2a9b1; /* to avoid a glaring white while the background-image hasn’t loaded */
 				margin-inline: auto; /* horizontally center the <article> */
 				max-inline-size: max-content;
 				overflow-block: auto;
+			}
+
+			#background {
+				background-size: cover;
+				background-position: center;
+				background-color: #a2a9b1; /* to avoid a glaring white while the background-image hasn’t loaded */
+				position: fixed;
+				width: 100vw; /* use vw/vh, rather than 100%, to not be affected by <body>’s scrollbar, if any */
+				height: 100vh;
+				inset: 0;
+				z-index: -1;
 			}
 
 			article {
@@ -113,6 +121,7 @@
 		</style>
 	</head>
 	<body>
+		<div id=background></div>
 		<article>
 			<main>
 				<h1>Dear Jens,</h1>
@@ -202,7 +211,7 @@ via Wikimedia Commons`;
 					return;
 				}
 
-				document.body.style.backgroundImage
+				document.getElementById('background').style.backgroundImage
 					= `url("https://commons.wikimedia.org/wiki/Special:Redirect/file/${fileTitle.replace(/"/g, '\\"')}")`;
 				document.getElementById('attributionPictureOfTheDay').innerHTML = await getAttribution(fileTitle);
 			}
