Add a TODO to one style
I expect the eventual resolution of this TODO will be that I throw away
the logical styles (because we don’t actually need this website to
support multiple directionalities at the moment), for improved browser
support.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				margin: 40px;
 				padding: 16px;
 				box-sizing: border-box;
-				min-block-size: calc(100vh - 2*40px);
+				min-block-size: calc(100vh - 2*40px); /* TODO vh with -block- doesn’t make sense (the solution would be vb but not even Firefox supports that) */
 				max-inline-size: 688px;
 				background: rgba(255, 255, 255, 75%);
 			}
