Show author in italic
To set it a bit apart from the main compliment content.

--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
 				margin-block-end: calc((120px - 104px)/2); /* so the whole button still has the same block size */
 			}
 
+			.author {
+				font-style: italic;
+			}
+
 			footer p,
 			footer p * {
 				font-weight: normal;
@@ -357,6 +361,7 @@ via Wikimedia Commons`;
 				if (compliment.author) {
 					if (complimentAuthor === null) {
 						complimentAuthor = document.createElement('p');
+						complimentAuthor.classList.add('author');
 					} else {
 						complimentAuthor.remove();
 					}
