Support setting width and height on compliment images
This informs the browser of the intrinsic size of the image before it’s
loaded, so that space for it can be already reserved and the layout
doesn’t “jump” once the image is loaded.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 			figure img,
 			figure video {
 				max-inline-size: 100%;
+				block-size: auto;
 			}
 
 			figure.audio {
@@ -231,9 +232,13 @@ via Wikimedia Commons`;
 				{
 					text: 'Here goes the text for a very long compliment that spans multiple lines and talks about how great Jens is.',
 					image: 'Placeholder.png',
+					imageWidth: 480,
+					imageHeight: 480,
 				},
 				{
 					image: 'Placeholder.png',
+					imageWidth: 480,
+					imageHeight: 480,
 					author: 'Test Author',
 				},
 				{
@@ -300,6 +305,8 @@ via Wikimedia Commons`;
 					}
 					complimentContainer.append(complimentImageFigure);
 					complimentImageImg.src = compliment.image;
+					updateAttribute(complimentImageImg, 'width', compliment.imageWidth);
+					updateAttribute(complimentImageImg, 'height', compliment.imageHeight);
 				} else {
 					if (complimentImageFigure !== null) {
 						complimentImageFigure.remove();
@@ -371,6 +378,14 @@ via Wikimedia Commons`;
 						complimentAuthor.remove();
 						complimentAuthor = null;
 					}
+				}
+			}
+
+			function updateAttribute(element, attribute, value) {
+				if (value !== undefined) {
+					element.setAttribute(attribute, value);
+				} else {
+					element.removeAttribute(attribute);
 				}
 			}
 
