Support setting width and height on compliment videos
Same benefit as for images. (More, really, as videos probably take
longer to load.)

--- a/index.html
+++ b/index.html
@@ -356,6 +356,8 @@ via Wikimedia Commons`;
 					}
 					complimentContainer.append(complimentVideoFigure);
 					complimentVideoVideo.src = compliment.video;
+					updateAttribute(complimentVideoVideo, 'width', compliment.videoWidth);
+					updateAttribute(complimentVideoVideo, 'height', compliment.videoHeight);
 				} else {
 					if (complimentVideoFigure !== null) {
 						complimentVideoFigure.remove();
