Revert "Preload compliment images after background image"
Now that we set width and height on the <img>, preloading the images is
less necessary – and since it looks like we’ll have a lot of compliment
images, it also seems more excessive to preload all of them when the
average page view probably won’t need more than a few of them.

This reverts commit b163164c7ec2baf71c09fc41f160e3185e845e36.

--- a/index.html
+++ b/index.html
@@ -221,9 +221,7 @@ via Wikimedia Commons`;
 				document.getElementById('attributionPictureOfTheDay').innerHTML = await getAttribution(fileTitle);
 			}
 
-			loadBackground()
-				.then(preloadComplimentImages)
-				.catch(console.error);
+			loadBackground().catch(console.error);
 
 			const compliments = [
 				{
@@ -246,24 +244,6 @@ via Wikimedia Commons`;
 					author: 'Test Recorder',
 				},
 			];
-
-			function preloadImage(image) {
-				const link = document.createElement('link');
-				link.href = image;
-				link.rel = 'preload';
-				link.as = 'image';
-				document.head.append(link);
-			}
-
-			function preloadComplimentImages() {
-				for (const compliment of compliments) {
-					if (compliment.image) {
-						preloadImage(compliment.image);
-					}
-					// we don’t preload audio – the browser preloads that as soon as we create the new Audio(),
-					// that’s early enough (there’s a delay before the human clicks the “play” button)
-				}
-			}
 
 			const complimentContainer = document.getElementById('complimentContainer');
 			let complimentText = null,
