Add example video file
I’d been developing the “video” feature with a real video compliment
(not to be committed to this repository), but let’s add an example video
to the repository as well. The file [1] is CC0 and has the same name on
Wikimedia Commons.

[1]: https://commons.wikimedia.org/wiki/File:Chen-Gackstatter_surface.webm

--- a/index.html
+++ b/index.html
@@ -243,6 +243,11 @@ via Wikimedia Commons`;
 					audio: 'LL-Q188_(deu)-Sebastian_Wallroth-Beispiel.wav',
 					author: 'Test Recorder',
 				},
+				{
+					video: 'Chen-Gackstatter_surface.webm',
+					videoWidth: 1080,
+					videoHeight: 1080,
+				},
 			];
 
 			const complimentContainer = document.getElementById('complimentContainer');
