Only get relevant extmetadata from API
This probably doesn’t affect server-side performance, but at least it
transfers less data over the wire. (There are about a dozen other
properties that we don’t care about.)

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
 				url.searchParams.set('titles', `File:${fileTitle}`);
 				url.searchParams.set('prop', 'imageinfo');
 				url.searchParams.set('iiprop', 'extmetadata');
+				url.searchParams.set('iiextmetadatafilter', ['Artist', 'ObjectName', 'LicenseShortName', 'LicenseUrl'].join('|'));
 				url.searchParams.set('format', 'json');
 				url.searchParams.set('formatversion', '2');
 				url.searchParams.set('origin', '*');
