Improve error handling when loading background image
If there’s an error, log it to the console, and don’t leave the
attribution as “loading” forever.

--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
 					const response = await fetch(url);
 					const { parse: { text: html } } = await response.json();
 					return html.replace(/^<p>([^]*)\n<\/p>$/, '$1').replace(/ /g, '_');
-				} catch {
+				} catch (e) {
+					console.error('Could not load picture of the day:', e);
 					return null;
 				}
 			}
@@ -214,6 +215,7 @@ via Wikimedia Commons`;
 			async function loadBackground() {
 				const fileTitle = await pictureOfTheDay();
 				if (!fileTitle) {
+					document.getElementById('attributionPictureOfTheDay').textContent = 'error';
 					return;
 				}
 
