Add title to play button
This is mainly meant for accessibility – the title becomes the label of
the button, since it doesn’t have any text content. (An aria-label
attribute would achieve the same effect, but I think it doesn’t hurt to
also make the text available as title / hover text.)

--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@ via Wikimedia Commons`;
 						complimentAudioFigcaptionP.textContent = 'Turn up your volume and click me to listen to the compliment.';
 						complimentAudioFigcaption.append(complimentAudioFigcaptionP);
 						complimentAudioButton = document.createElement('button');
+						complimentAudioButton.title = 'Play';
 						complimentAudioButton.classList.add('play');
 						complimentAudioButton.addEventListener('click', playAudio);
 						complimentAudioFigure.append(complimentAudioFigcaption, complimentAudioButton);
