Fix a bad variable name

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ via Wikimedia Commons`;
 						complimentVideoVideo.preload = true;
 						complimentVideoFigure.append(complimentVideoVideo);
 					} else {
-						complimentVideo.remove();
+						complimentVideoFigure.remove();
 					}
 					complimentContainer.append(complimentVideoFigure);
 					complimentVideoVideo.src = compliment.video;
