Fix srcset of background image
Compare the previous commit – if we’re using “width” descriptors, then
the main source must also be included with its width. (I’m not sure why
the browser can’t infer it from the width attribute, in fact, but
whatever, let’s add it.) Without this, Firefox never loaded the
full-size version of the image, it would stop at the 1920px version.

--- a/index.html
+++ b/index.html
@@ -230,13 +230,16 @@ via Wikimedia Commons`;
 					backgroundImg.height = height;
 				}
 				backgroundImg.src = `https://commons.wikimedia.org/wiki/Special:Redirect/file/${fileTitle}`;
-				backgroundImg.srcset = `
-					https://commons.wikimedia.org/wiki/Special:Redirect/file/${fileTitle}?width=320 320w,
-					https://commons.wikimedia.org/wiki/Special:Redirect/file/${fileTitle}?width=640 640w,
-					https://commons.wikimedia.org/wiki/Special:Redirect/file/${fileTitle}?width=800 800w,
-					https://commons.wikimedia.org/wiki/Special:Redirect/file/${fileTitle}?width=1024 1024w,
-					https://commons.wikimedia.org/wiki/Special:Redirect/file/${fileTitle}?width=1280 1280w,
-					https://commons.wikimedia.org/wiki/Special:Redirect/file/${fileTitle}?width=1920 1920w`;
+				if (width) {
+					backgroundImg.srcset = `
+						https://commons.wikimedia.org/wiki/Special:Redirect/file/${fileTitle} ${width}w,
+						https://commons.wikimedia.org/wiki/Special:Redirect/file/${fileTitle}?width=320 320w,
+						https://commons.wikimedia.org/wiki/Special:Redirect/file/${fileTitle}?width=640 640w,
+						https://commons.wikimedia.org/wiki/Special:Redirect/file/${fileTitle}?width=800 800w,
+						https://commons.wikimedia.org/wiki/Special:Redirect/file/${fileTitle}?width=1024 1024w,
+						https://commons.wikimedia.org/wiki/Special:Redirect/file/${fileTitle}?width=1280 1280w,
+						https://commons.wikimedia.org/wiki/Special:Redirect/file/${fileTitle}?width=1920 1920w`;
+				}
 				document.getElementById('attributionPictureOfTheDay').innerHTML = attributionHtml;
 			}
 
